--- a/style.css
+++ b/style.css
@@ -56,6 +56,31 @@ section {
   padding: 2rem 9%;
 }
 
+.heading {
+  text-align: center;
+  padding: 2.5rem 0;
+}
+.heading span {
+  font-size: 3.5rem;
+  background: rgba(255, 165, 0, 0.2);
+  color: var(--orange);
+  border-radius: 0.5rem;
+  padding: 0.2rem 1rem;
+}
+@media (max-width: 450px) {
+  .heading span {
+    font-size: 2.5rem;
+  }
+}
+@media (max-width: 310px) {
+  .heading span {
+    font-size: 2rem;
+  }
+}
+.heading .space {
+  background: none;
+}
+
 header {
   position: fixed;
   top: 0;
@@ -294,6 +319,87 @@ header .search-bar-container label:hover {
 }
 .home .controls .vid-btn.active {
   background: var(--orange);
+}
+
+.book .row {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 1.5rem;
+  align-items: center;
+}
+.book .row .image {
+  flex: 1 1 40rem;
+}
+.book .row .image img {
+  width: 100%;
+}
+.book .row form {
+  flex: 1 1 40rem;
+  padding: 2rem;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+  border-radius: 0.5rem;
+}
+.book .row form .inputBox {
+  padding: 0.5rem 0;
+}
+.book .row form .inputBox h3 {
+  font-size: 2rem;
+  padding: 1rem 0;
+  color: #666;
+}
+.book .row form .inputBox input {
+  width: 100%;
+  padding: 1rem;
+  border: 0.1rem solid rgba(0, 0, 0, 0.1);
+  font-size: 1.7rem;
+  color: #333;
+  text-transform: var(--orange);
+}
+
+.packages .box-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+.packages .box-container .box {
+  flex: 1 1 30rem;
+  border-radius: 0.5rem;
+  overflow: hidden;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.3);
+  margin: 2rem;
+}
+.packages .box-container .box img {
+  height: 25rem;
+  width: 100%;
+  object-fit: cover;
+}
+.packages .box-container .box .content {
+  padding: 2rem;
+}
+.packages .box-container .box .content h3 {
+  font-size: 2rem;
+  color: #333;
+}
+.packages .box-container .box .content h3 i {
+  color: var(--orange);
+}
+.packages .box-container .box .content p {
+  font-size: 1.7rem;
+  color: #666;
+  padding: 1rem 0;
+}
+.packages .box-container .box .content .stars i {
+  font-size: 1.7rem;
+  color: var(--orange);
+}
+.packages .box-container .box .content .price {
+  font-size: 2rem;
+  color: #333;
+  padding-top: 1rem;
+}
+.packages .box-container .box .content .price span {
+  color: #666;
+  font-size: 1.5rem;
+  text-decoration: line-through;
 }
 
 /*# sourceMappingURL=style.css.map */
