--- a/style.scss
+++ b/style.scss
@@ -4,8 +4,6 @@
     --orange: #ffa500;
 }
 
-
-
 * {
     font-family: 'Lato';
     margin: 0;
@@ -55,6 +53,33 @@ html {
 
 section {
     padding: 2rem 9%;
+}
+
+.heading {
+    text-align: center;
+    padding: 2.5rem 0;
+
+
+
+    span {
+        font-size: 3.5rem;
+        background: rgba(255, 165, 0, 0.2);
+        color: var(--orange);
+        border-radius: .5rem;
+        padding: .2rem 1rem;
+
+        @media (max-width: 450px) {
+        font-size: 2.5rem;
+        }
+
+        @media (max-width: 310px) {
+            font-size: 2rem;
+        }
+    }
+
+    .space {
+        background: none;
+    }
 }
 
 header {
@@ -329,3 +354,110 @@ header {
     }
 }
 
+.book {
+
+    .row {
+        display: flex;
+        flex-wrap: wrap;
+        margin: 1.5rem;
+        align-items: center;
+
+        .image {
+            flex:1 1 40rem;
+
+            img {
+                width: 100%;
+            }
+        }
+
+        form {
+            flex:1 1 40rem;
+            padding: 2rem;
+            box-shadow: 0 1rem 2rem rgba(0, 0, 0, .1);
+            border-radius: .5rem;
+
+            .inputBox {
+                padding:.5rem 0 ;
+
+                h3{
+                    font-size: 2rem;
+                    padding: 1rem 0;
+                    color: #666;
+                }
+
+                input {
+                    width: 100%;
+                    padding: 1rem;
+                    border: .1rem solid rgba(0, 0, 0, .1);
+                    font-size: 1.7rem;
+                    color: #333;
+                    text-transform: var(--orange);
+                }
+            }
+        }
+    }
+}
+
+.packages {
+
+    .box-container {
+        display: flex;
+        flex-wrap: wrap;
+        
+
+        .box {
+            flex: 1 1 30rem;
+            border-radius: .5rem;
+            overflow: hidden;
+            box-shadow: 0 1rem 2rem rgba(0, 0, 0, .3);
+            margin: 2rem;
+
+
+            img {
+                height: 25rem;
+                width: 100%;
+                object-fit: cover;
+            }
+
+            .content {
+                padding: 2rem;
+
+                h3 {
+                    font-size: 2rem;
+                    color: #333;
+
+                    i {
+                        color:var(--orange);
+                    }
+                }
+
+                p {
+                    font-size: 1.7rem;
+                    color: #666;
+                    padding: 1rem 0;
+                }
+
+                .stars {
+                    i {
+                        font-size: 1.7rem;
+                        color:var(--orange);
+                    }
+                }
+
+                .price {
+                    font-size: 2rem;
+                    color: #333;
+                    padding-top: 1rem;
+
+                    span {
+                        color: #666;
+                        font-size: 1.5rem;
+                        text-decoration: line-through;
+
+                    }
+                }
+
+            }
+        }
+    }
+}
