--- a/style.css
+++ b/style.css
@@ -402,4 +402,80 @@ header .search-bar-container label:hover {
   text-decoration: line-through;
 }
 
+.services {
+  background-color: rgba(251, 232, 255, 0.664);
+}
+.services .box-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 1.5rem;
+}
+.services .box-container .box {
+  flex: 1 1 30rem;
+  border-radius: 0.5rem;
+  padding: 1rem;
+  text-align: center;
+}
+.services .box-container .box:hover {
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+}
+.services .box-container .box i {
+  padding: 1rem;
+  font-size: 5rem;
+  color: var(--orange);
+}
+.services .box-container .box h3 {
+  font-size: 2.5rem;
+  color: #333;
+}
+.services .box-container .box p {
+  font-size: 1.5rem;
+  color: #727272;
+  padding: 1rem 0;
+}
+
+.gallery .box-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+}
+.gallery .box-container .box {
+  overflow: hidden;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.3);
+  border: 1rem solid #fff;
+  border-radius: 0.5rem;
+  flex: 1 1 30rem;
+  height: 40rem;
+  position: relative;
+}
+.gallery .box-container .box:hover .content {
+  top: 0;
+}
+.gallery .box-container .box img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+.gallery .box-container .box .content {
+  position: absolute;
+  top: -100%;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.7);
+  padding: 2rem;
+  padding-top: 5rem;
+}
+.gallery .box-container .box .content h3 {
+  font-size: 2.5rem;
+  color: var(--orange);
+}
+.gallery .box-container .box .content p {
+  font-size: 1.5rem;
+  color: #eee;
+  padding: 0.5rem 0;
+}
+
 /*# sourceMappingURL=style.css.map */
