--- a/style.css
+++ b/style.css
@@ -478,4 +478,133 @@ header .search-bar-container label:hover {
   padding: 0.5rem 0;
 }
 
+.review .mySwiper {
+  padding-bottom: 2rem;
+}
+.review .mySwiper .swiper-wrapper .swiper-slide .box {
+  padding: 2rem;
+  margin: 2rem;
+  text-align: center;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+  border-radius: 0.5rem;
+}
+.review .mySwiper .swiper-wrapper .swiper-slide .box img {
+  height: 13rem;
+  width: 13rem;
+  object-fit: cover;
+  border-radius: 50%;
+  margin-bottom: 1rem;
+}
+.review .mySwiper .swiper-wrapper .swiper-slide .box h3 {
+  color: #333;
+  font-size: 2.5rem;
+}
+.review .mySwiper .swiper-wrapper .swiper-slide .box p {
+  color: #666;
+  font-size: 1.5rem;
+  padding: 1rem 0;
+}
+.review .mySwiper .swiper-wrapper .swiper-slide .box .stars i {
+  color: var(--orange);
+  font-size: 1.7rem;
+}
+
+.contact .row textarea {
+  width: 49%;
+  margin: 1rem 0;
+  padding: 1rem;
+  font-size: 1.7rem;
+  color: #333;
+  background: #f7f7f7;
+}
+.contact .row {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  align-items: center;
+}
+.contact .row form {
+  flex: 1 1 50rem;
+  padding: 2rem;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+  border-radius: 0.5rem;
+}
+.contact .row form .inputBox {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.contact .row form .inputBox input {
+  width: 49%;
+  margin: 1rem 0;
+  padding: 1rem;
+  font-size: 1.7rem;
+  color: #333;
+  background: #f7f7f7;
+}
+@media (max-width: 450px) {
+  .contact .row form .inputBox input {
+    width: 100%;
+  }
+}
+.contact .row .image {
+  flex: 1 1 35rem;
+}
+.contact .row .image img {
+  width: 100%;
+}
+.contact .row textarea {
+  height: 15rem;
+  resize: none;
+  width: 100%;
+  text-transform: none;
+}
+
+.brand .swiper .swiper-wrapper .swiper-slide img {
+  width: 100%;
+  height: 15rem;
+}
+
+.footer {
+  background: #333;
+}
+.footer .box-container .box a, .footer .box-container .box h3 {
+  font-size: 2.5rem;
+  padding: 0.7rem 0;
+  color: #eee;
+}
+.footer .box-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+}
+.footer .box-container .box {
+  padding: 1rem 0;
+  flex: 1 1 25rem;
+}
+.footer .box-container .box p {
+  color: #eee;
+  font-size: 1.5rem;
+}
+.footer .box-container .box a {
+  display: block;
+  font-size: 1.5rem;
+}
+.footer .box-container .box a:hover {
+  color: var(--orange);
+  text-decoration: underline;
+}
+.footer .credit {
+  text-align: center;
+  padding: 2rem 1rem;
+  margin-top: 1rem;
+  font-size: 2rem;
+  font-weight: normal;
+  color: #fff;
+  border-top: 0.1rem solid rgba(255, 255, 255, 0.2);
+}
+.footer .credit span {
+  color: var(--orange);
+}
+
 /*# sourceMappingURL=style.css.map */
