--- a/style.scss
+++ b/style.scss
@@ -552,3 +552,186 @@ header {
         }
     }
 }
+
+.review {
+
+    .mySwiper {
+        padding-bottom: 2rem;
+
+        .swiper-wrapper {
+            
+
+            .swiper-slide {
+
+                .box {
+                    padding: 2rem;
+                    margin: 2rem;
+                    text-align: center;
+                    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .1);
+                    border-radius: .5rem;
+
+                    img {
+                        height: 13rem;
+                        width: 13rem;
+                        object-fit: cover;
+                        border-radius: 50%;
+                        margin-bottom: 1rem;
+
+                    }
+
+                    h3 {
+                        color: #333;
+                        font-size: 2.5rem;
+
+                    }
+
+                    p {
+                        color: #666;
+                        font-size: 1.5rem;
+                        padding: 1rem 0;
+
+                    }
+
+                    .stars {
+
+                        i {
+                            color: var(--orange);
+                            font-size: 1.7rem;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+.contact {
+
+    %properties-textarea {
+        width: 49%;
+        margin: 1rem 0;
+        padding: 1rem;
+        font-size: 1.7rem;
+        color: #333;
+        background: #f7f7f7;
+    };
+
+    .row {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 1.5rem;
+        align-items: center;
+
+        form {
+            flex: 1 1 50rem;
+            padding: 2rem;
+            box-shadow: 0 1rem 2rem rgba(0, 0, 0, .1);
+            border-radius: .5rem;
+
+            .inputBox {
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: space-between;
+
+                input {
+                    width: 49%;
+                    margin: 1rem 0;
+                    padding: 1rem;
+                    font-size: 1.7rem;
+                    color: #333;
+                    background: #f7f7f7;
+
+                    @media (max-width:450px) {
+                        width: 100%;
+                    }
+                }
+            }
+        }
+
+        .image {
+            flex: 1 1 35rem;
+
+            img {
+                width: 100%;
+            }
+        }
+
+        textarea {
+            height: 15rem;
+            resize: none;
+            width: 100%;
+            text-transform: none;
+            @extend %properties-textarea;
+        }
+    }
+
+
+}
+
+.brand {
+    .swiper {
+        .swiper-wrapper {
+            .swiper-slide {
+
+                img {
+                    width: 100%;
+                    height: 15rem;
+                }
+            }
+        }
+    }
+}
+
+.footer {
+    background: #333;
+    %text-template {
+        font-size: 2.5rem;
+        padding: 0.7rem 0;
+        color: #eee;
+    }
+
+    .box-container {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 1.5rem;
+
+        .box {
+            padding: 1rem 0;
+            flex: 1 1 25rem;
+
+            h3 {
+               @extend %text-template;
+            }
+
+            p {
+                color: #eee;
+                font-size: 1.5rem;
+            }
+
+            a {
+                display: block;
+                font-size: 1.5rem;
+                @extend %text-template;
+
+                &:hover {
+                    color: var(--orange);
+                    text-decoration: underline;
+                }
+            }
+        }
+    }
+
+    .credit {
+        text-align: center;
+        padding: 2rem 1rem;
+        margin-top: 1rem;
+        font-size: 2rem;
+        font-weight: normal;
+        color:#fff;
+        border-top: .1rem solid rgba(255,255,255,.2);
+
+        span {
+            color: var(--orange);
+        }
+    }
+}
